--- a/templates/play.html
+++ b/templates/play.html
@@ -1,3 +1,4 @@
 {% extends 'base.html' %}
 {% block js %}/play.js{% endblock %}
 {% block css %}/play.css{% endblock %}
+{% block robots %}index,nofollow{% endblock %}
