--- a/templates/specificgame.html
+++ b/templates/specificgame.html
@@ -2,6 +2,7 @@
 {% block desc %}Join a game of heavily customized mafia!{% endblock %}
 {% block js %}/specific.js{% endblock %}
 {% block css %}/specific.css{% endblock %}
+{% block robots %}noindex,nofollow{% endblock %}
 {% block body %}
         <!-- <div class='players'></div> -->
         <div class='chat'></div>
