--- a/static/sass/specific.scss
+++ b/static/sass/specific.scss
@@ -102,9 +102,8 @@ h1 {
     *:last-child {
         margin-top: auto;
     }
-    form input[type="submit"] {
+    form {
         width: 100%;
-        padding: 7px;
     }
     &[off] { transform: translateX(100%) }
 }
