--- a/static/sass/specific.scss
+++ b/static/sass/specific.scss
@@ -158,11 +158,16 @@ input[type="text"] {
     padding: 0 7px;
     vertical-align: middle;
     flex-grow: 1;
-    height: 100%;
+    height: 1.875rem;
     &:focus {
         outline: none;
         border: 1px solid #ff5722;
     }
+}
+
+fieldset {
+    padding: 13px 15px;
+    font-size: 1rem;
 }
 
 @import 'submits';
