--- a/templates/specificgame.html
+++ b/templates/specificgame.html
@@ -9,7 +9,7 @@
         <div class='details'>
             <h1></h1>
             <form>
-                <input type='submit' value='Player up' />
+                <input type='submit' value='Player up' class='playerup' />
                 <!-- <input type='submit' value='Edit Game logic' /> -->
                 <!-- <input type='submit' value='Start game' /> -->
             </form>
