--- a/static/sass/specific.scss
+++ b/static/sass/specific.scss
@@ -53,6 +53,19 @@ body {
         'input setup';
 }
 
+body.dark:before {
+    content: ' ';
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background-color: #0007;
+}
+
 message, system, internal {
     display: block;
     padding: 3px 7px;
@@ -168,6 +181,16 @@ input[type="text"] {
 fieldset {
     padding: 13px 15px;
     font-size: 1rem;
+    * + * {
+        margin-top: 10px;
+    }
+}
+
+form.centered {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 @import 'submits';
