--- a/static/sass/specific.scss
+++ b/static/sass/specific.scss
@@ -63,7 +63,7 @@ body.dark:before {
     margin: 0;
     padding: 0;
     border: 0;
-    background-color: #0007;
+    background-color: rgba(#000, 0.467);
 }
 
 message, system, internal {
