Add link to disc-rod

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                 <figcaption>News</figcaption>
                 </figure>
             </a>
-            <a href='#'>
+            <a href='https://discord.gg/QRegKSetRB'>
                 <figure>
                 <img src='https://via.placeholder.com/64x64.png'/>
                 <figcaption>Discord</figcaption>
