Fix CSS for gui boxes

--- a/static/sass/specific.scss
+++ b/static/sass/specific.scss
@@ -186,6 +186,15 @@ fieldset {
     }
 }
 
+select {
+    color: inherit;
+    background: inherit;
+    font-family: inherit;
+    option {
+        background-color: $detailsbackground;
+    }
+}
+
 form.centered {
     position: absolute;
     left: 50%;
