Adding legit logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block bodyattr %}footer{% endblock %}
 {% block body %}
         <aside>
-            <img src='https://via.placeholder.com/700x300.png'/>
+            <img src='/logo.png'>
         </aside>
         <ul>
             <li class='login'><span>Login</span></li>
