Make footer look less jank

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -97,7 +97,7 @@ footer {
     font-family: Roboto, times, "Helvetica Neue", helvetica, arial, sans-serif;
     text-transform: uppercase;
     font-size: 13px;
-    padding-bottom: 20px;
+    padding-top: 20px;
     body[nofooter] & {
         transform: translateY(100%);
     }
